tests/sksl/errors/PrototypeInFuncBody.glsl
### Compilation failed:

error: 2: expected ';', but found '('
1 error
